﻿- Add submesh and sub-building rendering to preview images
- Tweak thumbnail lighting and angles slightly


Version 2.2.3

- Add additional public method calls for interfacing with other mods
- Move all inter-mod public methods to new Interfaces class
- Update translation framework
- Overhaul XML settings file handling


Version 2.2.2

- Add manual translation selection option
- Update translation framework to latest version with improved fallback language detection
- Allow for longer translation strings in dropdown menu widths
- Overhaul thumbnail background option choices; now a dropdown (color, plain, skybox)
- Memory management: delay generating thumbnails until actually in-game
- Memory management: don't generate disabled thumbnails
- Regenerating thumbnails now does only that (leaves the rest of the button alone)
- Standardise exception logging


Version 2.2.1

- 2.2 UI speed bost function is now optional (trading off UI performance for game speed)
- Add external interface for other mods to determine whether or not this mod is managing a given prefab
- Tweak settings panel layout to accomodate longer translation strings
- Correct error in zh-tw PRR_UIC_OIL translation 


Version 2.2

- Add configurable XML translation framework (based on BloodyPenguin's translation framework)
- Add Traditional Chinese translation by M.S.Referee
- Mod now responds to in-game language changes
- Add active detection of prefabs that failed game init
- Workplace counts (totals or breakdowns) in settings panel now automatically update as valid values are entered
- Assign a minimum of one workplace to all workplace buildings if XML setting is zero or missing
- Settings category filter buttons now toggle on shift- or control-click
- Add mod compatibility check for Garbage Bin Controller mod
- Performance improvement: deactivate ploppable panel when not visible
- Performance improvement: destroy settings panel when not visible
- Standardise all logging


Version 2.1.2
